Search-Service module functional. Still TBD its functionality with real data.